--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,19 @@ jobs:
         run: |
           pytest
 
+      - name: Send failure email
+        if: failure()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "CI Pipeline - Tests Failed"
+          body: "Les tests de votre pipeline ont échoué !"
+          to: tonemail@example.com
+          from: GitHub Actions
+
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
@@ -41,3 +54,8 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+
+      - name: Push to second registry
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest autreuser/flaskapp:latest
+          docker push autreuser/flaskapp:latest
